@@ -1,4 +1,5 @@
 0.5.0
+* minForth config.fs/make/fs added
 * nci: new module (n-Tree cell iterator) (2007-03-13)
 * nct: new module (n-Tree cell tree) (2007-03-13)
 * ncn: new module (n-Tree cell node) (2007-03-13)
